--- a/Reference/MainPage.xaml
+++ b/Reference/MainPage.xaml
@@ -18,29 +18,36 @@
             <Style x:Key="CustomPickerStyle" TargetType="Picker">
                 <Setter Property="FontSize" Value="14" />
                 <Setter Property="FontAttributes" Value="Bold" />
-                <Setter Property="Margin" Value="20,10" />
+                <Setter Property="Margin" Value="20,0" />
                 <Setter Property="VerticalOptions" Value="Center" />
-                <Setter Property="HorizontalOptions" Value="FillAndExpand" />
+                <Setter Property="HorizontalOptions" Value="Fill" />
                 <Setter Property="TitleColor" Value="#dcdcdc" />
                 <Setter Property="TextColor" Value="White" />
                 <Setter Property="HeightRequest" Value="40" />
                 <Setter Property="Title" Value="Select an item" />
-                <Setter Property="FontFamily" Value="YourCustomFontName" />
+                <Setter Property="FontFamily" Value="Calibri" />
                 <Setter Property="BackgroundColor" Value="Transparent" />
-                <Setter Property="CharacterSpacing" Value="0.5" />
-                <Setter Property="BorderWidth" Value="1" />
-                <Setter Property="CornerRadius" Value="5" />
+                <Setter Property="CharacterSpacing" Value="0.5" />                
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+                <Setter Property="IsVisible" Value="True" />
+                <Setter Property="IsEnabled" Value="True" />
             </Style>
 
         </ResourceDictionary>
     </ContentPage.Resources>
+    <Grid BackgroundColor="Black">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-    <StackLayout Spacing="20" Padding="20" BackgroundColor="Black">
+        <StackLayout Spacing="20" Padding="20" BackgroundColor="Black"> 
         <Label Text="VA Disability Calculator" FontSize="Large" TextColor="White" HorizontalOptions="Center" />
 
-        <Label Text="Select disability percentage:" TextColor="White"/>
+        <StackLayout Margin="0,0,0,20">
+            <Label Text="Select disability percentage:" TextColor="White"/>
 
-        <Grid>
+            <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
@@ -73,98 +80,103 @@
             <Button Text="Clear" Clicked="OnClearClicked" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="5" BackgroundColor="#F44336" TextColor="White" BorderColor="White" BorderWidth="1" CornerRadius="5" Margin="0,20,0,0" />
         </Grid>
 
-        <Label x:Name="CombinedRatingLabel" FontSize="Medium" TextColor="White"/>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
+            <Label x:Name="CombinedRatingLabel" FontSize="Medium" TextColor="White"/>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-            <!-- Parent and Children Input -->
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+                    <!-- Parent and Children Input -->
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
 
-                <!-- Married -->
-                <Label Text="Married" TextColor="White"
-                   Grid.Row="0"
-                   Grid.Column="0"
-                   VerticalOptions="Center" />
-                <Switch x:Name="MarriedSwitch"
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    VerticalOptions="Center"
-                    Margin="0,0,40,0"
-                    Toggled="OnMarriedToggled" />
+                        <!-- Married -->
+                        <Label Text="Married" TextColor="White"
+                           Grid.Row="1"
+                           Grid.Column="0"
+                           VerticalOptions="Center" />
+                        <Switch x:Name="MarriedSwitch"
+                            Grid.Row="1"
+                            Grid.Column="1"
+                            VerticalOptions="Center"
+                            Margin="0,0,45,0"
+                            Toggled="OnMarriedToggled" />
 
-                <!-- Parents -->
-                <Label Text="Parents" TextColor="White"
-                   Grid.Row="0"
-                   Grid.Column="2"
-                   VerticalOptions="Center" />
-                <Picker x:Name="ParentsPicker" SelectedIndexChanged="OnPickerSelectedIndexChanged"
-                    Grid.Row="0"
-                    Grid.Column="3"
-                    Title="Select parents"
-                    Style="{StaticResource CustomPickerStyle}">
-                    <Picker.ItemsSource>
-                        <x:Array Type="{x:Type x:Int32}">
-                            <x:Int32>0</x:Int32>
-                            <x:Int32>1</x:Int32>
-                            <x:Int32>2</x:Int32>
-                        </x:Array>
-                    </Picker.ItemsSource>
-                </Picker>
+                        <!-- Parents -->
+                        <Label Text="Parents" TextColor="White"
+                           Grid.Row="3"
+                           Grid.Column="0"
+                           VerticalOptions="Center" />
+                        <Picker x:Name="ParentsPicker" SelectedIndexChanged="OnPickerSelectedIndexChanged"
+                            Grid.Row="3"
+                            Grid.Column="1"
+                            Title="Select parents"
+                            Style="{StaticResource CustomPickerStyle}">
+                                <Picker.ItemsSource>
+                                    <x:Array Type="{x:Type x:Int32}">
+                                        <x:Int32>0</x:Int32>
+                                        <x:Int32>1</x:Int32>
+                                        <x:Int32>2</x:Int32>
+                                    </x:Array>
+                                </Picker.ItemsSource>
+                        </Picker>
 
-                <!-- Children -->
-                <Label Text="Children" TextColor="White"
-                   Grid.Row="1"
-                   Grid.Column="0"
-                   VerticalOptions="Center" />
-                <Picker x:Name="ChildrenPicker"
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    Title="Select children"
-                    Style="{StaticResource CustomPickerStyle}">
-                    <Picker.ItemsSource>
-                        <x:Array Type="{x:Type x:Int32}">
-                            <x:Int32>0</x:Int32>
-                            <x:Int32>1</x:Int32>
-                            <x:Int32>2</x:Int32>
-                            <x:Int32>3</x:Int32>
-                            <x:Int32>4</x:Int32>
-                            <x:Int32>5</x:Int32>
-                            <x:Int32>6</x:Int32>
-                            <x:Int32>7</x:Int32>
-                            <x:Int32>8</x:Int32>
-                            <x:Int32>9</x:Int32>
-                        </x:Array>
-                    </Picker.ItemsSource>
-                </Picker>
-            </Grid>
+                        <!-- Children -->
+                        <Label Text="Children" TextColor="White"
+                           Grid.Row="4"
+                           Grid.Column="0"
+                           VerticalOptions="Center" />
+                        <Picker x:Name="ChildrenPicker"
+                           Grid.Row="4"
+                           Grid.Column="1"
+                           Title="Select children"
+                           Style="{StaticResource CustomPickerStyle}">
+                        <Picker.ItemsSource>
+                                <x:Array Type="{x:Type x:Int32}">
+                                    <x:Int32>0</x:Int32>
+                                    <x:Int32>1</x:Int32>
+                                    <x:Int32>2</x:Int32>
+                                    <x:Int32>3</x:Int32>
+                                    <x:Int32>4</x:Int32>
+                                    <x:Int32>5</x:Int32>
+                                    <x:Int32>6</x:Int32>
+                                    <x:Int32>7</x:Int32>
+                                    <x:Int32>8</x:Int32>
+                                    <x:Int32>9</x:Int32>
+                                </x:Array>
+                            </Picker.ItemsSource>
+                        </Picker>
+                    </Grid>
+                    <Label x:Name="CompensationLabel" Text="$ " FontSize="Medium" TextColor="Green" HorizontalOptions="Center" VerticalOptions="Center" Margin="0,10,0,0" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" />
+                </Grid>
 
-            <Label x:Name="CompensationLabel" Text="$ " FontSize="Medium" TextColor="Green" HorizontalOptions="Center" VerticalOptions="Center" />
-
-            <Label Text="Please note that the results provided by this app are intended for estimation purposes only and should not be considered as official or definitive. Actual VA combined disability ratings may differ from the calculated results. For accurate and up-to-date information, consult with the Department of Veterans Affairs or a qualified representative." 
-               FontSize="Small" 
-               HorizontalOptions="Center" 
-               VerticalOptions="EndAndExpand" 
+            </StackLayout>
+        </StackLayout>
+            <Label Grid.Row="1"
+               Text="Please note that the results provided by this app are intended for estimation purposes only and should not be considered as official or definitive. Actual VA combined disability ratings may differ from the calculated results. For accurate and up-to-date information, consult with the Department of Veterans Affairs or a qualified representative."
+               FontSize="Small"
+               HorizontalOptions="Center"
+               VerticalOptions="End"
                TextColor="Gray"
+               Margin="10, 0"
                HorizontalTextAlignment="Center" />
-        </Grid>
-    </StackLayout>
+    </Grid>
 </ContentPage>
