--- a/Reference/MainPage.xaml
+++ b/Reference/MainPage.xaml
@@ -1,5 +1,6 @@
 ﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              x:Class="Reference.MainPage">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -45,7 +46,7 @@
         <Label Text="VA Disability Calculator" FontSize="Large" TextColor="White" HorizontalOptions="Center" />
 
         <StackLayout Margin="0,0,0,20">
-            <Label Text="Select disability percentage:" TextColor="White"/>
+            <Label Text="Select disability percentage:" TextColor="White"/>  
 
             <Grid>
             <Grid.ColumnDefinitions>
