--- a/Reference/MainPage.xaml
+++ b/Reference/MainPage.xaml
@@ -11,7 +11,7 @@
                 <Setter Property="TextColor" Value="White" />
                 <Setter Property="FontAttributes" Value="Bold" />
                 <Setter Property="CornerRadius" Value="5" />
-                <Setter Property="Margin" Value="10,0,10,0" />
+                <Setter Property="Margin" Value="10,0,10,0" />               
             </Style>
             <Style x:Key="ClearButtonStyle" TargetType="Button">
                 <Setter Property="BackgroundColor" Value="Red" />
@@ -24,7 +24,7 @@
                 <Setter Property="BorderColor" Value="WhiteSmoke"/>
                 <Setter Property="BorderWidth" Value="2" />
 
-            /Style>
+            </Style>
             <Style x:Key="CustomPickerStyle" TargetType="Picker">
                 <Setter Property="FontAttributes" Value="Bold" />
                 <Setter Property="Margin" Value="80,0,0,10" />
