--- a/Reference/MainPage.xaml
+++ b/Reference/MainPage.xaml
@@ -1,7 +1,12 @@
-﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-             x:Class="VADisabilityCalculator.MainPage">
+﻿<ContentPage x:Class="VADisabilityCalculator.MainPage"
+xmlns="http://xamarin.com/schemas/2014/forms"
+xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+xmlns:syncfusion="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
+xmlns:sfSwitch="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
+xmlns:local="clr-namespace:VADisabilityCalculator"             
+xmlns:xct="http://xamarin.com/schemas/2020/toolkit">
+
+
 
 
     <ContentPage.Resources>
@@ -11,9 +16,9 @@
                 <Setter Property="TextColor" Value="White" />
                 <Setter Property="FontAttributes" Value="Bold" />
                 <Setter Property="CornerRadius" Value="5" />
-                <Setter Property="Margin" Value="10,0,10,0" />               
+                <Setter Property="Margin" Value="10,0,10,0" />
             </Style>
-            
+
             <Style x:Key="ClearButtonStyle" TargetType="Button">
                 <Setter Property="BackgroundColor" Value="Red" />
                 <Setter Property="TextColor" Value="White" />
@@ -25,29 +30,31 @@
                 <Setter Property="BorderColor" Value="WhiteSmoke"/>
                 <Setter Property="BorderWidth" Value="2" />
             </Style>
-            
+
             <Style x:Key="CustomPickerStyle" TargetType="Picker">
                 <Setter Property="FontAttributes" Value="Bold" />
-                <Setter Property="Margin" Value="60,0,0,10" />
+                <Setter Property="Margin" Value="40,0,0,0" />
                 <Setter Property="VerticalOptions" Value="End" />
                 <Setter Property="HorizontalOptions" Value="EndAndExpand" />
-                <Setter Property="TitleColor" Value="WhiteSmoke" />                
+                <Setter Property="TitleColor" Value="WhiteSmoke" />
                 <Setter Property="CharacterSpacing" Value="0" />
                 <Setter Property="HorizontalTextAlignment" Value="Center" />
                 <Setter Property="IsVisible" Value="True" />
-                <Setter Property="IsEnabled" Value="True" />                
-                <Setter Property="BackgroundColor" Value="WhiteSmoke" />
-                <Setter Property="Title" Value="_____" />
+                <Setter Property="IsEnabled" Value="True" />
+                <Setter Property="BackgroundColor" Value="WhiteSmoke" />                
+                <Setter Property="HeightRequest" Value="35"/>
+                <Setter Property="WidthRequest" Value="75" />
                 
+
             </Style>
-            
+
             <Style x:Key="CustomSwitchStyle" TargetType="Switch">
-                <Setter Property="Margin" Value="0,20,10,0" />
+                <Setter Property="Margin" Value="0,10,0,5" />
                 <Setter Property="VerticalOptions" Value="Center" />
                 <Setter Property="ThumbColor" Value="WhiteSmoke" />
-                <Setter Property="HorizontalOptions" Value="EndAndExpand" />                
+                <Setter Property="HorizontalOptions" Value="EndAndExpand" />
             </Style>
-            
+
         </ResourceDictionary>
     </ContentPage.Resources>
 
@@ -55,7 +62,7 @@
     <StackLayout BackgroundColor="Black" Orientation="Vertical" Spacing="0" Grid.Row="0">
 
         <ScrollView>
-            
+
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -119,24 +126,65 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
 
+                            <!-- Married Switch -->
+                            <Label Text="Married" TextColor="White" FontSize="Medium"
+                                   Grid.Row="0" Grid.Column="0" VerticalTextAlignment="End"/>
+                            <syncfusion:SfSwitch x:Name="MarriedSwitch" IsOn="{Binding isMarried}" VisualType="Custom" Grid.Row="0" Grid.Column="1" VerticalOptions="End" Style="{StaticResource CustomSwitchStyle}">
 
-                            <!-- Married -->
-                           <Label Text="Married" TextColor="White" FontSize="Medium"
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup  x:Name="CommonStates">
+                                        <VisualState x:Name="On">
+                                            <VisualState.Setters>
+                                                <Setter Property="SwitchSettings">
+                                                    <Setter.Value>
+                                                        <syncfusion:DefaultSwitchSettings  x:TypeArguments="syncfusion:OnState" 
+                                                         ThumbBorderWidth="0" TrackBorderWidth="2"  
+                                                         TrackHeightRequest="30" TrackWidthRequest="75" TrackCornerRadius="4"
+                                                         ThumbCornerRadius="10" ThumbHeightRequest="18" ThumbWidthRequest="18"
+                                                         TrackColor="LimeGreen" ThumbColor="WhiteSmoke">
+                                                        </syncfusion:DefaultSwitchSettings>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </VisualState.Setters>
+                                        </VisualState>
+
+                                        <VisualState x:Name="Off">
+                                            <VisualState.Setters>
+                                                <Setter Property="SwitchSettings">
+                                                    <Setter.Value>
+                                                        <syncfusion:DefaultSwitchSettings x:TypeArguments="syncfusion:OffState" 
+                                                         ThumbBorderWidth="0" TrackBorderWidth="2"  
+                                                         TrackHeightRequest="30" TrackWidthRequest="75" TrackCornerRadius="4"
+                                                         ThumbCornerRadius="10" ThumbHeightRequest="18" ThumbWidthRequest="18"
+                                                         TrackColor="IndianRed" ThumbColor="WhiteSmoke"/>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </VisualState.Setters>
+                                        </VisualState>
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                            </syncfusion:SfSwitch>
+                            
+
+
+
+                        <!-- Married (Old Switch XAMARIN.FORMS
+                            <Label Text="Married1" TextColor="White" FontSize="Medium"
                            Grid.Row="0"
                            Grid.Column="0"
                            VerticalOptions="End" />
-                           <Switch x:Name="MarriedSwitch"
+                            <Switch x:Name="MarriedSwitch1"
                            Grid.Row="0"
                            Grid.Column="1"                            
                            Style="{StaticResource CustomSwitchStyle}"
-                           Toggled="OnMarriedToggled" />
-
+                           Toggled="OnMarriedToggled" /> 
+                        -->
                             <!-- Parents -->
-                           <Label Text="Parents" TextColor="White" FontSize="Medium"
+                            <Label Text="Parents" TextColor="White" FontSize="Medium"
                            VerticalOptions="End"
                            Grid.Row="1"
                            Grid.Column="0"/>
-                           <Picker x:Name="ParentsPicker" SelectedIndexChanged="OnPickerSelectedIndexChanged" 
+                            <Picker x:Name="ParentsPicker" SelectedIndexChanged="OnPickerSelectedIndexChanged" 
                            Grid.Row="1"
                            Grid.Column="1"                            
                            SelectedIndex="0"    
